[package]
name = "billine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.7"
reqwest = "0.11.24"
sha2 = "0.10.8"
hmac = "0.12.1"
serde_json = "1.0"
rust_decimal = { version = "1.32", features = ["serde-with-str"] }
rust_decimal_macros = "1.32"
serde_repr = "0.1"
thiserror = "1.0.44"
chrono = "0.4.34"
tokio = "1.36.0"
itertools = "0.12.1"
md-5 = "0.10.6"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt", "macros"] }
serde = { features = ["rc"] }
